<resources>
    <string name="app_name"> Pineus Tilu App</string>
    <string name="app_name2">Payment has been received is a correct and usable sentence in written English1. It is often used to inform someone that you have received payment for a product or service1. An acknowledgement receipt of payment is a document that serves as confirmation that a payment has been received. It should include all relevant details such as the payment amount, the date of receive, method of payment, name of the payer, and any other relevant details2.</string>
    <string name="app_name3">To pay for your order, you typically have several options depending on the specific merchant or platform you are using. Here are some common methods of payment:   1. Credit or Debit Card: This is one of the most common ways to pay for online orders. When checking out, you will be asked to enter your card information, including the card number, expiration date, and security code (CVV/CVC). Make sure the website is secure (look for https in the URL and a padlock icon) to protect your payment information.
        2. Digital Wallets: Many online platforms support digital wallets such as PayPal, Google Pay, Apple Pay, or Amazon Pay. These services securely store your payment information, allowing you to make purchases without entering your card details each time. Select the digital wallet option at checkout and follow the instructions to complete the payment.
        3. Bank Transfers: Some platforms or sellers may offer the option to pay via bank transfer. This method involves transferring funds directly from your bank account to the merchant account. You need the seller bank account details, including the account number and routing number. Ensure that you are using a trusted platform and double-check the accuracy of the account details before proceeding.
        4. Gift Cards or Vouchers: If you have a gift card or voucher for the specific merchant or platform, you can often use it to pay for your order. Look for the option to redeem a gift card during the checkout process and follow the instructions provided.
        5. Cash on Delivery (COD): In some cases, particularly for local or regional purchases, you may have the option to pay in cash when the order is delivered to your doorstep. This method allows you to pay the delivery person directly when you receive your order.
        Its important to note that the available payment methods may vary depending on the specific merchant, country, or region. Always ensure that you are using a secure payment method and trusted platform to protect your financial information.</string>
    <string name="DetailFasilitasPt1Pt2">DETAIL FASILITAS PINEUS TILU 1 &amp; 2</string>
    <string name="PineusTilu1Fasilitas">FASILITAS PRIVAT:\n
- 4 Pax Amenities (Foam Matras + Bantal, Sleeping Bag, Default Sarapan)\n
- Colokan listrik di dalam tenda\n
- Lampu dalam tenda\n
- Meja privat dining setiap tenda\n
- Coffee table di dalam tenda\n
- Alat BBQ tiap tenda (belum termasuk arang, capitan,\n
  alat makan &amp; minum)</string>
    <string name="faspub">FASILITAS PUBLIK :</string>
    <string name="b1_atv_entertainment">Lorem Ipsum sir dolor Lorem Ipsum sir dolor  Lorem\nIpsum sir dolor Lorem Ipsum sir dolor Lorem Ipsum\nsir dolor Lorem Ipsum sir dolor  Lorem Ipsum sir dolor\nLorem Ipsum sir dolor Lorem Ipsum sir dolor Lorem\nIpsum sir dolor</string>
    <string name="b2_atv_entertainment">- Unit ATV\n- Helm\n- Instruktur\n- P3k / Safety Equipments\n-Asuransi\n- Local Transport\n- Tiket Jalur</string>
    <string name="h_atv1">ATV (Single)</string>
    <string name="h_atv2">ATV (Tandem)</string>
    <string name="header_dbd">Deck 2 Pineus Tilu 1</string>
    <string name="header2_dbd">Deskripsi Kegiatan</string>
    <string name="deskripsi">Lorem Ipsumn Lorem Ipsum sir dolor Lorem Ipsumn\nsir dolor Lorem Ipsum sir dolor\nLorem Ipsum sir dolor Lorem Ipsum sir dolor </string>
    <string name="fasilitas_rafting">&#8226; Safety EquipmentsP3K\n&#8226; Perahu Karet Berisi 4 Orang\n&#8226; Dayung\n&#8226; Guide Rafting\n&#8226; Pemandu\n&#8226; Tempat Bilas\n&#8226; Locacl Transport dan instruktur\n
    </string>
    <string name="fasilitas_offroad">&#8226; Unit Offroad Land Rover and Driver\n&#8226; Instruktur\n&#8226; P3K/Safety Equipment\n&#8226; Asuransi\n&#8226; Local Transport\n&#8226; Tiket Jalur
    </string>
    <string name="fasilitas_atv">&#8226; Unit Atv Helm\n&#8226; Instruktur\n&#8226; P3K/Safety Equipment\n&#8226; Asuransi\n&#8226; Local Transport\n&#8226; Tiket Jalur
    </string>
    <string name="fasilitas_flyingfox">&#8226; Harness Pengaman\n&#8226; Instruktur\n&#8226; P3K/Safety Equipment\n&#8226; Local Transport\n&#8226; Tiket
    </string>
    <string name="fasilitas_teambuilding">&#8226; Equipments\n&#8226; Instruktur\n&#8226; P3K/Safety Equipment\n&#8226; Sound System
    </string>
    <string name="fasilitas_paintball">&#8226; Seragam\n&#8226; Rompi Pelindung\n&#8226; Masker/Google\n&#8226; Senapan Paintball\n&#8226; Peluru 30 butir\n&#8226; Instruktur\n&#8226; P3K/Safety Equipment\n&#8226; Local Transport\n&#8226; Tiket Jalur
    </string>
    <string name="header3_dbd">(*Pemesanan untuk saat ini hanya via admin/resepsionis.\n Laman ini untuk saat ini hanya sebagai media informasi)</string>
    <string name="body2.1_dbd">&#8226; Safety EquipmentsP3K\n&#8226; Perahu Karet Berisi 5 Orang\n&#8226; Dayung\n&#8226; Guide Rafting\n&#8226; Pemandu\n&#8226; Tempat Bilas\n&#8226; Locacl Transport dan instruktur\n
    </string>
    <string name="Peraturan_dan_Ketentuan"> • Check-in pukul 14.00 WIB &amp; Check-out pukul 12.00 WIB\n
• Keep Clean in the Area\n
• Keep Your Belongings Safe\n
• Keep Safe &amp; Be Careful at Area\n
• No Drugs &amp; Alcohol\n
• No Immoral Activities\n
• No Dog Allowed\n
• No Pork &amp; Dog Meal at BBQ and Campfire Equipments\n
• No Smoking Inside the Tent\n
• Sort Organic &amp; Inorganic Trash\n
• Tidak boleh ada pengeras suara atau speaker\n
• Tidak boleh ada suara musik, kecuali hanya terdengar\n  di tendanya sendiri.\n
• Tidak boleh membawa alat musik yg bersuara keras\n
• Tidak boleh membawa alat karaoke\n
• Tidak boleh membuat suara yang terdengar mengganggu tenda tetangga dan suara alam dan lingkungannya•\n   Check-in pukul 14.00 WIB &amp; Check-out pukul 12.00 WIB\n
• Keep Clean in the Area\n
• Keep Your Belongings Safe\n
• Keep Safe &amp; Be Careful at Area\n
• No Drugs &amp; Alcohol\n
• No Immoral Activities\n
• No Dog Allowed\n
• No Pork &amp; Meal at BBQ &amp; Campfire Equipments\n
• No Smoking Inside the Tent\n
• Sort Organic &amp; Inorganic Trash\n
• Tidak boleh ada pengeras suara atau speaker\n
• Tidak boleh ada suara musik, kecuali hanya terdengar\n    di tendanya sendiri.\n
• Tidak boleh membawa alat musik yg bersuara keras\n
• Tidak boleh membawa alat karaoke\n
• Tidak boleh membuat suara yang terdengar mengganggu tenda tetangga dan suara alam dan lingkungannya\n</string>
    <string name="Pernyataan_Persetujuan">
            Mulai Januari 2022, setiap pengunjung yang camping di Pineus Tilu Camping Ground wajib menyampaikan pernyataan berikut ini. Bahwa saya selaku penanggungjawab pribadi dan rombongan/grup menyatakan bahwa apabila terjadi kecelakaan/musibah atau bencana yang terjadi selama kami camping di area Pineus Tilu Camping Ground tidak akan menuntut apapun kepada pengelola, kecuali akan mendapatkan hak tanggungan asuransi yang telah bekerjasama dengan pihak Perhutani sesuai dengan detail jumlah pertanggungjawaban sebagai berikut:\n
        \n
            Mendapat jaminan asuransi kecelakaan diri pengunjung dari ASURANSI SYARIAH AMANAH GITHA Polis induk No. 8009000050100188 untuk kecelakaan yang dialami sejak memasuki pintu masuk selama berada di dalam lokasi berakhir pada saat keluar. Besarnya Jaminan Asuransi:\n
        \n
a. Meninggal Dunia akibat kecelakaan\n    (1x24 Jam) . . . . . . . . . . . . . . . . . . . . . . . . . . . .Rp. 15.000.000,-\n
b. Meninggal Dunia di tempat wisata bukan akibat\n     kecelakaan . . . . . . . . . . . . . . . . . .  Rp. 3.000.000,-\n
c. Cacat tetap sesuai prosentase (%) sesuai sarat umum\n     polisi maksimum . . . . . . . . Rp. 20.000.000,-\n
d. Biaya Perawatan/Pengobatan akibat kecelakaan\n     maksimum . . . . . . . . . . . . . . . . . Rp. 3.000.000,-\n
</string>
</resources>