<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#F7F7F7"
    android:fillViewport="true"
    tools:context=".DetailBookingDeckActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/header_dbd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="26dp"
            android:layout_marginTop="26dp"
            android:fontFamily="@font/raleway_bold"
            android:text="Rafting Pineus Tilu"
            android:textColor="@color/hitam"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/avail_dbd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="31dp"
            android:layout_marginTop="23dp"
            android:fontFamily="@font/raleway"
            android:text="Title"
            android:textColor="@color/black"
            android:textSize="24sp"
            app:layout_constraintStart_toEndOf="@id/header_dbd"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/threedots_pp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="showPopupMenuEntertainDet"
            android:src="@drawable/menu"
            app:layout_constraintBottom_toBottomOf="@+id/header_dbd"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.874"
            app:layout_constraintStart_toEndOf="@+id/header_dbd"
            app:layout_constraintTop_toTopOf="@+id/header_dbd"
            app:layout_constraintVertical_bias="0.0" />

        <ImageView
            android:id="@+id/mainpic_dbd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:src="@drawable/detailpic_entertaindetail"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/header_dbd" />

        <HorizontalScrollView
            android:id="@+id/horizontalscr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/mainpic_dbd">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/fotoslide1"
                    android:layout_width="108dp"
                    android:layout_height="55dp"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="5dp"
                    android:src="@drawable/detailpic_entertaindetail" />

                <ImageView
                    android:id="@+id/fotoslide2"
                    android:layout_width="108dp"
                    android:layout_height="55dp"
                    android:layout_marginRight="5dp"
                    android:src="@drawable/detailpic_entertaindetail" />

                <ImageView
                    android:id="@+id/fotoslide3"
                    android:layout_width="108dp"
                    android:layout_height="55dp"
                    android:layout_marginRight="5dp"
                    android:src="@drawable/detailpic_entertaindetail" />

                <ImageView
                    android:id="@+id/fotoslide4"
                    android:layout_width="108dp"
                    android:layout_height="55dp"
                    android:layout_marginRight="5dp"
                    android:src="@drawable/detailpic_entertaindetail" />

                <ImageView
                    android:id="@+id/fotoslide5"
                    android:layout_width="108dp"
                    android:layout_height="55dp"
                    android:layout_marginRight="5dp"
                    android:src="@drawable/detailpic_entertaindetail" />

            </LinearLayout>

        </HorizontalScrollView>


        <TextView
            android:id="@+id/h2_dbd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="26dp"
            android:layout_marginTop="42dp"
            android:fontFamily="@font/raleway_bold"
            android:text="@string/header2_dbd"
            android:textColor="@color/hitam"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@+id/b2_dbd"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/horizontalscr"></TextView>

        <TextView
            android:id="@+id/b2_dbd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/raleway_bold"
            android:text="@string/deskripsi"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.006"
            app:layout_constraintStart_toStartOf="@id/h2_dbd"
            app:layout_constraintTop_toBottomOf="@+id/h2_dbd" />

        <TextView
            android:id="@+id/fpub_dbd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="26dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="250dp"
            android:fontFamily="@font/raleway_bold"
            android:text="@string/faspub"
            android:textColor="@color/hitam"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/b2_dbd" />


        <TextView
            android:id="@+id/fasilitas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/raleway_bold"
            android:text="@string/fasilitas_rafting"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@id/fpub_dbd"
            app:layout_constraintTop_toBottomOf="@+id/fpub_dbd" />

        <TextView
            android:id="@+id/tglbook_dbd"
            android:text="Tanggal Booking"
            android:textSize="14sp"
            android:fontFamily="@font/raleway"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/fasilitas"
            app:layout_constraintStart_toStartOf="@id/fpub_dbd"
            android:textColor="@color/black"
            android:layout_marginTop="30dp"/>

        <TextView
            android:id="@+id/textViewTanggal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/header3_dbd"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="@id/fasilitas"
            app:layout_constraintTop_toBottomOf="@+id/tglbook_dbd" />

        <TextView
            android:id="@+id/harga"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/poppinsbold"
            android:text="Harga : Rp 600.000"
            android:textColor="@color/hitam2"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="@+id/fasilitas"
            app:layout_constraintTop_toBottomOf="@+id/textViewTanggal" />


        <androidx.cardview.widget.CardView

            android:id="@+id/btn_book_dbd"
            android:layout_width="178dp"
            android:layout_height="43dp"
            android:layout_marginBottom="50dp"
            app:layout_editor_absoluteY="1074dp"
            app:layout_constraintTop_toBottomOf="@id/harga"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"
            app:cardElevation="8dp"
            app:cardBackgroundColor="@color/green"
            app:cardCornerRadius="10dp">

            <TextView
                android:id="@+id/booktext_dbd"
                android:text="Book"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:fontFamily="@font/raleway"
                app:layout_editor_absoluteY="70dp"
                app:layout_editor_absoluteX="70dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="8dp"
                android:layout_marginStart="69dp"
                android:textColor="@color/black"/>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView

            android:id="@+id/btn_kembali_dbd"
            android:layout_width="178dp"
            android:layout_height="43dp"
            android:layout_marginBottom="50dp"
            android:layout_marginStart="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:cardElevation="8dp"
            app:cardBackgroundColor="@color/abu"
            app:cardCornerRadius="10dp">

            <TextView
                android:id="@+id/booktextkmbl_dbd"
                android:text="kembali"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:fontFamily="@font/raleway"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="8dp"
                android:layout_marginStart="59dp"
                android:textColor="@color/black"/>

        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>